--- a/src/components/PainFlagModal.css
+++ b/src/components/PainFlagModal.css
@@ -123,6 +123,7 @@
   margin-top: 1rem;
   font-size: 0.875rem;
   line-height: 1.5;
+  color: #856404;
 }
 
 .modal-actions {
